Version 1.4.0
  Enhancements:
  - Add option "readonly" for IMPORT FOREIGN TABLE that sets the foreign table
    option "readonly" to "true" on all imported foreign tables.
    Idea by Julien Goux.
  Bugfixes:
  - Selecting timestamps with lc_messages other than English caused errors like
    "ORA-01406: la valeur de la colonne extraite a été tronquée"
    Report by Damien Szczyt.
  - Complicated queries could lead to an error like
    "Internal oracle_fdw error: encountered unknown node type 524."
    Report by "bartonjd".
  - PostGIS type "geometry" cannot be found if ArcGIS is installed.
    Report by "dtoller".

Version 1.3.0, released 2015-12-21
  Enhancements:
  - Add support for IMPORT FOREIGN SCHEMA for PostgreSQL 9.5 and higher.
  - Improve cost estimates by using the row count estimate.
    Inspiration by Daniele Sevegnani.
  - Support two-dimensional geometries with an additional measure dimension.
    Idea by Paul Dziemiela.
  - Throw an error if oracle_close_connections() is called inside a
    transaction that modified Oracle data.

  Bugfixes:
  - The server crashed for the constructs like "<column> = ANY (NULL)".
    Report and patch by dreckard.
  - oracle_fdw sometimes failed to recognize the SDO_GEOMETRY data type.
    Per report from Bevan Jenkins.
  - Some point geometries were not translated properly.
    Per report from Bevan Jenkins.
  - Ignore SDO_GEOMETRY elements with zero SDO_ETYPE.
    According to Oracle, that is the correct behaviour.
    Per report from Bevan Jenkins.
  - Fix EXPLAIN (VERBOSE) for queries containing current_timestamp.
    This caused "ORA-30081: invalid data type for datetime/interval arithmetic".
    Noticed by "kkwhite".
  - Oracle TIMESTAMP(0) fields caused errors like:
    ERROR: invalid input syntax for type timestamp: "1977-06-09 18:00:00."
    Also, handling of dates and timestamps before Christ was broken.
    Report by "abiuan".

Version 1.2.0, released 2015-01-03
  Enhancements: