@@ -242,3 +242,25 @@ EXECUTE stmt(1);
 (1 row)
 
 DEALLOCATE stmt;
+/*
+ * Test foreign table based on SELECT statement.
+ */
+CREATE FOREIGN TABLE qtest (
+   id  integer OPTIONS (key 'yes') NOT NULL,
+   vc  character varying(10),
+   num numeric(7,5)
+) SERVER oracle OPTIONS (table '(SELECT id, vc, num FROM typetest1)');
+-- INSERT works with simple "view"
+INSERT INTO qtest (id, vc, num) VALUES (5, 'via query', -12.5);
+ALTER FOREIGN TABLE qtest OPTIONS (SET table '(SELECT id, SUBSTR(vc, 1, 3), num FROM typetest1)');
+-- SELECT and DELETE should also work with derived columns
+SELECT * FROM qtest ORDER BY id;
+ id |    vc     |    num    
+----+-----------+-----------
+  1 | var       |   3.14159
+  3 | a\x1B\x07 |  -2.71828
+  4 | sho       |   0.00000
+  5 | via       | -12.50000
+(4 rows)
+
+DELETE FROM qtest WHERE id = 5;
